--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Hello amfareed7</h1>
+    <h1> Hello amfareed_</h1>
     <script src="./script.js"></script>
 </body>
 </html>
